2001-10-03  Vassili Karpov  <malc@pulsesoft.com>

	* emultempl/elf32.em (parse_args): Handle -z nocopyreloc.
	* NEWS: Mention -z nocopyreloc.
	* ld.texinfo (Options): Describe nocopyreloc.

2001-10-03  Alan Modra  <amodra@bigpond.net.au>

	* configure: Regenerate.

2001-10-02  Alan Modra  <amodra@bigpond.net.au>

	* ldver.h (ld_program_version): Remove declaration.
	* lexsup.c (parse_args): Move printing of copyright message..
	* ldver.c (ldversion): .. to here.
	Use BFD_VERSION_STRING in place of BFD_VERSION.
	(ld_program_version): Remove.
	* Makefile.am (Makefile): Depend on bfd/configure.in.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2001-09-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* Makefile.am: Update dependencies with "make dep-am".
	* Makefile.in: Regenerate.

2001-09-29  John Reiser  <jreiser@BitWagon.com>

	* ldlang.c (lang_common): Conditionally inhibit Common allocation.
	* lexsup.c: Add --no-define-common commandline option.
	* ldgram.y: Add INHIBIT_COMMON_ALLOCATION script command.
	* ldlex.l: Likewise.
	* ld.h: Add command_line.inhibit_common_definition.
	* ldmain.c (main): Initialize.
	* ld.texinfo: Document.

2001-09-26  Alan Modra  <amodra@bigpond.net.au>

	* ldmisc.c (USE_STDARG): Remove.
	(info_msg): Define using VPARAMS, VA_OPEN, VA_FIXEDARG, VA_CLOSE.
	(einfo): Likewise.
	(minfo): Likewise.
	(lfinfo): Likewise.

	* ldmisc.h: Remove #ifdef ANSI_PROTOTYPES and non-ansi
	declarations.  Update copyright.

2001-09-24  Charles Wilson  <cwilson@ece.gatech.edu>

	* pe-dll.c: Remove obsoleted declaration of
	pe_get_data_import_dll_name.
	(pe_create_import_fixup): Fix thinko.

	* ld.texinfo(enable-auto-import): Clarify the explanation.

2001-09-24  Nick Clifton  <nickc@cambridge.redhat.com>

	* pe-dll.c (pe_create_import_fixup): Revert previous patch.
	* emultemp/pe.em (pe_data_import_dll): Move definition outside of
	DLL_SUPPORT controlled code.

2001-09-24  Charles Wilson  <cwilson@ece.gatech.edu>
 